perfGenie improvements of ravi pulle